tests/snapshots/run_wpt_conformance__trtx_mul_float16_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul float16 2D tensors",
    "trtx",
    "PASS",
)
