tests/snapshots/run_wpt_conformance__trtx_mul_float16_broadcast_1D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul float16 broadcast 1D to 4D",
    "trtx",
    "PASS",
)
